@@ -1331,27 +1331,27 @@ typedef struct {
 } CHARSET ;
 
 CHARSET gc_iv_charsets[] = {
- { "Terminal (CP437)", 	        "CP437", 'Q'},
- { "English (US-ASCII)", 	"ASCII", 'A'},
- { "Arabic (ISO-8859-6)",	"ISO-8859-6" },
- { "Arabic (Windows, CP1256)", 	"ARABIC" },
- { "Arabic (Dos, CP864)",	"CP864" },
- { "Baltic (ISO-8859-4)",	"ISO-8859-4" },
- { "Central European (ISO-8859-2)","ISO-8859-2" },
- { "Central European (CP1250)",	"CP1250" },
- { "Cyrillic (ISO-8859-5)",	"ISO-8859-5" },
- { "Cyrillic (CP1251)",	        "CP1251" },
- { "Greek (ISO-8859-7)",	"ISO-8859-7" },
- { "Greek (CP1253)",		"CP1253" },
- { "Hebrew (Windows, CP1255)", 	"HEBREW" },
- { "Hebrew (Dos, CP862)",	"CP862" },
- { "Hebrew (ISO-8859-8)",	"ISO-8859-8" },
- { "Latin 9 (ISO-8859-15))",	"ISO-8859-15" },
- { "Maltese (ISO-8859-3)",	"ISO-8859-3" },
- { "Turkish (ISO-8859-9)",	"ISO-8859-9" },
- { "Turkish (CP1254)",	        "CP1254" },
- { "Western (CP1252)",	        "CP1252" },
- { "Western (ISO-8859-1)",	"ISO-8859-1" },
+ { N_("Terminal (CP437)"),      "CP437", 'Q'},
+ { N_("English (US-ASCII)"), 	"ASCII", 'A'},
+ { N_("Arabic (ISO-8859-6)"),	"ISO-8859-6" },
+ { N_("Arabic (Windows, CP1256)"), 	"ARABIC" },
+ { N_("Arabic (Dos, CP864)"),	"CP864" },
+ { N_("Baltic (ISO-8859-4)"),	"ISO-8859-4" },
+ { N_("Central European (ISO-8859-2)"),"ISO-8859-2" },
+ { N_("Central European (CP1250)"),	"CP1250" },
+ { N_("Cyrillic (ISO-8859-5)"),	"ISO-8859-5" },
+ { N_("Cyrillic (CP1251)"),     "CP1251" },
+ { N_("Greek (ISO-8859-7)"),	"ISO-8859-7" },
+ { N_("Greek (CP1253)"),	"CP1253" },
+ { N_("Hebrew (Windows, CP1255)"), 	"HEBREW" },
+ { N_("Hebrew (Dos, CP862)"),	"CP862" },
+ { N_("Hebrew (ISO-8859-8)"),	"ISO-8859-8" },
+ { N_("Latin 9 (ISO-8859-15)"),	"ISO-8859-15" },
+ { N_("Maltese (ISO-8859-3)"),	"ISO-8859-3" },
+ { N_("Turkish (ISO-8859-9)"),	"ISO-8859-9" },
+ { N_("Turkish (CP1254)")       "CP1254" },
+ { N_("Western (CP1252)")       "CP1252" },
+ { N_("Western (ISO-8859-1)"),	"ISO-8859-1" },
  { NULL, NULL} };
 
 
