@@ -1,3 +1,8 @@
+2006-02-18  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-internal-viewer.c:
+        i18n
+
 2006-02-13  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/main.c:
